--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.13.0",
     "method-override": "^3.0.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.12",
     "mongoose-paginate": "^5.0.3",
     "nodemon": "^1.18.4",
