--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "froala-editor": "^2.8.5",
     "helmet": "^3.13.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
