--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "event-stream": "^3.3.5",
