--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "event-stream": "^3.3.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "froala-editor": "^2.9.3",
     "helmet": "^3.15.1",
     "method-override": "^3.0.0",
