--- a/package.json
+++ b/package.json
@@ -4,28 +4,32 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "snyk test"
   },
   "author": "Alex Buaiscia",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
-    "event-stream": "^3.3.4",
-    "express": "^4.16.3",
+    "event-stream": "^3.3.5",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "froala-editor": "^2.8.5",
-    "helmet": "^3.13.0",
+    "formidable": "^1.2.1",
+    "froala-editor": "^2.9.3",
+    "helmet": "^3.15.1",
     "method-override": "^3.0.0",
-    "moment": "^2.22.2",
-    "mongoose": "^5.2.12",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.14",
     "mongoose-paginate": "^5.0.3",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
+  },
+  "devDependencies": {
+    "snyk": "^1.134.2"
   }
 }
