--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "snyk test",
-	"start": "node app.js"
+    "test": "snyk test"
   },
   "author": "Alex Buaiscia",
   "license": "ISC",
@@ -20,10 +19,10 @@
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "froala-editor": "^2.9.3",
-    "helmet": "^3.15.1",
+    "helmet": "^3.21.2",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.14",
+    "mongoose": "^5.7.5",
     "mongoose-paginate": "^5.0.3",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
@@ -31,6 +30,6 @@
     "passport-local-mongoose": "^5.0.1"
   },
   "devDependencies": {
-    "snyk": "^1.134.2"
+    "snyk": "^1.240.0"
   }
 }
