--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alex Buaiscia",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "connect-ensure-login": "^0.1.1",
