--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "snyk": "^1.240.0"
