--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alex Buaiscia",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "connect-ensure-login": "^0.1.1",
@@ -28,7 +29,8 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "snyk": "^1.240.0"
